re-fix messages behind title + friends

--- a/custom.css
+++ b/custom.css
@@ -625,6 +625,9 @@ RECOMMENDATIONS: EVERY URL AT THE BOTTOM SHOULD BE THE SAME TO MAKE THE THEME MA
 .chat .new-messages-bar {
 	top: 56px;
 }
+.flex-spacer, #friends {
+	overflow: visible;
+}
 /* #1e2124 */
 /* #36393e :border */
 .theme-dark .friends-table .scroller-wrap ::-webkit-scrollbar-thumb, .theme-dark .messages-wrapper .scroller-wrap ::-webkit-scrollbar-thumb {
